# go/internal/handlers/home.go
@@ -2,25 +2,15 @@ package handlers
 
 
 import (
+    "io"
 	"fmt"
 	"net/http"
+    "encoding/json"
+
 
 	"github.com/gin-gonic/gin"
 )
 
-// func Home(c *gin.Context) {
-// 	fmt.Println("Home", c.RemoteIP())
-// 	fmt.Println(c.Request,c.Request.Response)
-// 	c.JSON(200, gin.H{
-// 		// "message": "welcome" + c.ClientIP(),
-// 		// "header": c.Request.Header,
-// 		"home": c.Request.RequestURI,
-// 		"health": c.Request.RequestURI,
-// 		"chuck": c.Request.RequestURI,
-// 		"users": c.Request.RequestURI,
-// 		"users/:id": c.Request.RequestURI,
-// 	})
-// }
 
 // Home godoc
 // @Summary      Home endpoint
@@ -41,7 +31,7 @@ func Home(c *gin.Context) {
 	c.JSON(200, gin.H{
 		"base_url": baseURL,
 		"endpoints": []string{
-			baseURL + "/",
+			// baseURL + "/",
 			baseURL + "/health",
 			baseURL + "/chuck",
 			baseURL + "/users",
@@ -50,6 +40,67 @@ func Home(c *gin.Context) {
 			// baseURL + "/swagger/*any",
 		},
 	})
+}
+
+// ChuckNorris godoc
+// @Summary      Chuck Norris Joke
+// @Description  Get a random Chuck Norris joke
+// @Tags         fun
+// @Produce      json
+// @Success      200  {object}  map[string]interface{}
+// @Router       /chuck [get]
+func ChuckNorris(c *gin.Context) {
+	res, err := http.Get("https://api.chucknorris.io/jokes/random")
+	if err != nil {
+		c.JSON(http.StatusServiceUnavailable, gin.H{"status": "ERROR", "message": err.Error()})
+		return
+	}
+
+	formart := c.Query("fmt")
+	// https://api.chucknorris.io/jokes/random
+	// fmt.Println(res)
+	defer res.Body.Close()
+
+	// Read the raw body from the external API
+	body, err := io.ReadAll(res.Body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"status":  "ERROR",
+			"message": "Failed to read response",
+		})
+		return
+	}
+
+	var joke ChuckResponse
+	if err := json.Unmarshal(body, &joke); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"status":  "ERROR",
+			"message": "Failed to parse JSON",
+		})
+		return
+	}
+
+	if formart != "html" {
+
+		// c.Data(res.StatusCode, "application/json", body)
+		// default JSON response (cleaned)
+		c.JSON(http.StatusOK, gin.H{
+			"icon_url": joke.IconURL,
+			"joke":     joke.Value,
+		})
+		return
+	}
+	// if format == "html" {
+	html := fmt.Sprintf(`
+			<div>
+				<img src="%s" width="100"/>
+				<p>%s</p>
+				<button onclick="location.reload()">Reload</button>
+			</div>
+		`, joke.IconURL, joke.Value)
+
+	c.Data(http.StatusOK, "text/html; charset=utf-8", []byte(html))
+
 }
 
 func NotFound(c *gin.Context) {
